# Ledger

./: .gitignore  DESIGN.md  DOMAIN_NOTES.md  README.md  REPORT.md  init_db.py  pyproject.toml  requirements.txt  schema.sql
datagen/: company_generator.py  generate_all.py
ledger/: audit.py  event_store.py  temporal.py  upcasters.py  utils.py  what_if.py
ledger/agents/: __init__.py  base_agent.py  compliance_agent.py  credit_analysis_agent.py  decision_orchestrator.py  document_processing_agent.py  fraud_detection_agent.py  gas_town.py
ledger/domain/: errors.py
ledger/domain/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  credit_record.py  document_package.py  fraud_screening.py  loan_application.py
ledger/domain/handlers/: __init__.py  credit_analysis.py  human_review.py  requests.py  submission.py
ledger/mcp/: __init__.py  mcp_server.py  server.py
ledger/projections/: __init__.py  daemon.py  in_memory.py  projectors.py  runner.py  views.py
ledger/registry/: client.py  file_client.py
ledger/schema/: events.py
scripts/: manual_test_event_store_pg.py  run_demo.py  run_mcp.py  run_pipeline.py
tests/: conftest.py  test_concurrency.py  test_event_store.py  test_gas_town.py  test_mcp_lifecycle.py  test_narratives.py  test_projections.py  test_upcasting.py
tests/phase1/: test_aggregates.py  test_command_handlers.py  test_concurrency.py  test_event_models.py  test_event_store.py
tests/phase2/: test_domain.py
tests/phase3/: test_advanced_features.py  test_projections.py
